TP2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Call
Rule 1     Call -> Elementos RUN ( )
Rule 2     Elementos -> Elementos Elemento
Rule 3     Elementos -> <empty>
Rule 4     Elemento -> OperAr
Rule 5     Elemento -> OperLog
Rule 6     Elemento -> OperRel
Rule 7     Elemento -> Atri
Rule 8     Elemento -> RETURN Var
Rule 9     Elemento -> Funcao
Rule 10    Elemento -> Io
Rule 11    Elemento -> Conditional
Rule 12    Elemento -> For fimFor fimFor2
Rule 13    For -> FOR ( Atri ; OperRel
Rule 14    fimFor -> ; Atri )
Rule 15    fimFor2 -> { Elementos }
Rule 16    Conditional -> inicioElse fimElse
Rule 17    inicioElse -> ELSE
Rule 18    fimElse -> { Elementos }
Rule 19    Conditional -> inicioIF fimIF
Rule 20    fimIF -> { Elementos }
Rule 21    inicioIF -> IF ( OperRel )
Rule 22    inicioIF -> IF ( Var )
Rule 23    Funcao -> FNAM ( ) { Elementos }
Rule 24    Atri -> VAR [ NUM ]
Rule 25    Atri -> VAR [ NUM ] = NUM
Rule 26    Atri -> VAR [ NUM ] = VAR
Rule 27    Atri -> VAR [ Var ] = NUM
Rule 28    Atri -> VAR [ Var ] = VAR
Rule 29    Atri -> INT Var = VAR [ Var ]
Rule 30    Atri -> INT Var = Funcao
Rule 31    Atri -> INT Var = OperAr
Rule 32    Atri -> INT Var = NUM
Rule 33    Atri -> BOOLEAN Var = OperLog
Rule 34    Atri -> BOOLEAN Var = OperRel
Rule 35    Atri -> BOOLEAN Var = BOOL
Rule 36    Io -> READ ( Var )
Rule 37    Io -> WRITE NUM
Rule 38    Io -> WRITE Var
Rule 39    Io -> WRITE ( TEXTO )
Rule 40    OperLog -> BOOL AND BOOL
Rule 41    OperLog -> Var AND Var
Rule 42    OperLog -> Var AND BOOL
Rule 43    OperLog -> BOOL AND Var
Rule 44    OperLog -> BOOL OR BOOL
Rule 45    OperLog -> Var OR Var
Rule 46    OperLog -> Var OR BOOL
Rule 47    OperLog -> BOOL OR Var
Rule 48    OperAr -> OperAr + Termo
Rule 49    OperAr -> OperAr - Termo
Rule 50    OperAr -> Termo
Rule 51    Termo -> Termo * Factor
Rule 52    Termo -> Termo / Factor
Rule 53    Termo -> Termo MOD Factor
Rule 54    Termo -> Factor
Rule 55    Factor -> ( OperAr )
Rule 56    Factor -> NUM
Rule 57    Factor -> Var
Rule 58    OperRel -> Factor EQUALS Factor
Rule 59    OperRel -> Factor INF Factor
Rule 60    OperRel -> Factor SUP Factor
Rule 61    OperRel -> Factor INFEQ Factor
Rule 62    OperRel -> Factor SUPEQ Factor
Rule 63    Var -> VAR

Terminals, with rules where they appear

(                    : 1 13 21 22 23 36 39 55
)                    : 1 14 21 22 23 36 39 55
*                    : 51
+                    : 48
-                    : 49
/                    : 52
;                    : 13 14
=                    : 25 26 27 28 29 30 31 32 33 34 35
AND                  : 40 41 42 43
BOOL                 : 35 40 40 42 43 44 44 46 47
BOOLEAN              : 33 34 35
ELSE                 : 17
EQUALS               : 58
FNAM                 : 23
FOR                  : 13
IF                   : 21 22
INF                  : 59
INFEQ                : 61
INT                  : 29 30 31 32
MOD                  : 53
NUM                  : 24 25 25 26 27 32 37 56
OR                   : 44 45 46 47
READ                 : 36
RETURN               : 8
RUN                  : 1
SUP                  : 60
SUPEQ                : 62
TEXTO                : 39
VAR                  : 24 25 26 26 27 28 28 29 63
WRITE                : 37 38 39
[                    : 24 25 26 27 28 29
]                    : 24 25 26 27 28 29
error                : 
{                    : 15 18 20 23
}                    : 15 18 20 23

Nonterminals, with rules where they appear

Atri                 : 7 13 14
Call                 : 0
Conditional          : 11
Elemento             : 2
Elementos            : 1 2 15 18 20 23
Factor               : 51 52 53 54 58 58 59 59 60 60 61 61 62 62
For                  : 12
Funcao               : 9 30
Io                   : 10
OperAr               : 4 31 48 49 55
OperLog              : 5 33
OperRel              : 6 13 21 34
Termo                : 48 49 50 51 52 53
Var                  : 8 22 27 28 29 29 30 31 32 33 34 35 36 38 41 41 42 43 45 45 46 47 57
fimElse              : 16
fimFor               : 12
fimFor2              : 12
fimIF                : 19
inicioElse           : 16
inicioIF             : 19

Parsing method: LALR

state 0

    (0) S' -> . Call
    (1) Call -> . Elementos RUN ( )
    (2) Elementos -> . Elementos Elemento
    (3) Elementos -> .

    RUN             reduce using rule 3 (Elementos -> .)
    RETURN          reduce using rule 3 (Elementos -> .)
    BOOL            reduce using rule 3 (Elementos -> .)
    VAR             reduce using rule 3 (Elementos -> .)
    INT             reduce using rule 3 (Elementos -> .)
    BOOLEAN         reduce using rule 3 (Elementos -> .)
    FNAM            reduce using rule 3 (Elementos -> .)
    READ            reduce using rule 3 (Elementos -> .)
    WRITE           reduce using rule 3 (Elementos -> .)
    FOR             reduce using rule 3 (Elementos -> .)
    (               reduce using rule 3 (Elementos -> .)
    NUM             reduce using rule 3 (Elementos -> .)
    ELSE            reduce using rule 3 (Elementos -> .)
    IF              reduce using rule 3 (Elementos -> .)

    Call                           shift and go to state 1
    Elementos                      shift and go to state 2

state 1

    (0) S' -> Call .



state 2

    (1) Call -> Elementos . RUN ( )
    (2) Elementos -> Elementos . Elemento
    (4) Elemento -> . OperAr
    (5) Elemento -> . OperLog
    (6) Elemento -> . OperRel
    (7) Elemento -> . Atri
    (8) Elemento -> . RETURN Var
    (9) Elemento -> . Funcao
    (10) Elemento -> . Io
    (11) Elemento -> . Conditional
    (12) Elemento -> . For fimFor fimFor2
    (48) OperAr -> . OperAr + Termo
    (49) OperAr -> . OperAr - Termo
    (50) OperAr -> . Termo
    (40) OperLog -> . BOOL AND BOOL
    (41) OperLog -> . Var AND Var
    (42) OperLog -> . Var AND BOOL
    (43) OperLog -> . BOOL AND Var
    (44) OperLog -> . BOOL OR BOOL
    (45) OperLog -> . Var OR Var
    (46) OperLog -> . Var OR BOOL
    (47) OperLog -> . BOOL OR Var
    (58) OperRel -> . Factor EQUALS Factor
    (59) OperRel -> . Factor INF Factor
    (60) OperRel -> . Factor SUP Factor
    (61) OperRel -> . Factor INFEQ Factor
    (62) OperRel -> . Factor SUPEQ Factor
    (24) Atri -> . VAR [ NUM ]
    (25) Atri -> . VAR [ NUM ] = NUM
    (26) Atri -> . VAR [ NUM ] = VAR
    (27) Atri -> . VAR [ Var ] = NUM
    (28) Atri -> . VAR [ Var ] = VAR
    (29) Atri -> . INT Var = VAR [ Var ]
    (30) Atri -> . INT Var = Funcao
    (31) Atri -> . INT Var = OperAr
    (32) Atri -> . INT Var = NUM
    (33) Atri -> . BOOLEAN Var = OperLog
    (34) Atri -> . BOOLEAN Var = OperRel
    (35) Atri -> . BOOLEAN Var = BOOL
    (23) Funcao -> . FNAM ( ) { Elementos }
    (36) Io -> . READ ( Var )
    (37) Io -> . WRITE NUM
    (38) Io -> . WRITE Var
    (39) Io -> . WRITE ( TEXTO )
    (16) Conditional -> . inicioElse fimElse
    (19) Conditional -> . inicioIF fimIF
    (13) For -> . FOR ( Atri ; OperRel
    (51) Termo -> . Termo * Factor
    (52) Termo -> . Termo / Factor
    (53) Termo -> . Termo MOD Factor
    (54) Termo -> . Factor
    (63) Var -> . VAR
    (55) Factor -> . ( OperAr )
    (56) Factor -> . NUM
    (57) Factor -> . Var
    (17) inicioElse -> . ELSE
    (21) inicioIF -> . IF ( OperRel )
    (22) inicioIF -> . IF ( Var )

    RUN             shift and go to state 3
    RETURN          shift and go to state 10
    BOOL            shift and go to state 17
    VAR             shift and go to state 19
    INT             shift and go to state 21
    BOOLEAN         shift and go to state 22
    FNAM            shift and go to state 23
    READ            shift and go to state 24
    WRITE           shift and go to state 25
    FOR             shift and go to state 28
    (               shift and go to state 4
    NUM             shift and go to state 20
    ELSE            shift and go to state 29
    IF              shift and go to state 30

    Elemento                       shift and go to state 5
    OperAr                         shift and go to state 6
    OperLog                        shift and go to state 7
    OperRel                        shift and go to state 8
    Atri                           shift and go to state 9
    Var                            shift and go to state 11
    Funcao                         shift and go to state 12
    Io                             shift and go to state 13
    Conditional                    shift and go to state 14
    For                            shift and go to state 15
    Termo                          shift and go to state 16
    Factor                         shift and go to state 18
    inicioElse                     shift and go to state 26
    inicioIF                       shift and go to state 27

state 3

    (1) Call -> Elementos RUN . ( )

    (               shift and go to state 31


state 4

    (55) Factor -> ( . OperAr )
    (48) OperAr -> . OperAr + Termo
    (49) OperAr -> . OperAr - Termo
    (50) OperAr -> . Termo
    (51) Termo -> . Termo * Factor
    (52) Termo -> . Termo / Factor
    (53) Termo -> . Termo MOD Factor
    (54) Termo -> . Factor
    (55) Factor -> . ( OperAr )
    (56) Factor -> . NUM
    (57) Factor -> . Var
    (63) Var -> . VAR

    (               shift and go to state 4
    NUM             shift and go to state 20
    VAR             shift and go to state 35

    OperAr                         shift and go to state 32
    Termo                          shift and go to state 16
    Factor                         shift and go to state 33
    Var                            shift and go to state 34

state 5

    (2) Elementos -> Elementos Elemento .

    RUN             reduce using rule 2 (Elementos -> Elementos Elemento .)
    RETURN          reduce using rule 2 (Elementos -> Elementos Elemento .)
    BOOL            reduce using rule 2 (Elementos -> Elementos Elemento .)
    VAR             reduce using rule 2 (Elementos -> Elementos Elemento .)
    INT             reduce using rule 2 (Elementos -> Elementos Elemento .)
    BOOLEAN         reduce using rule 2 (Elementos -> Elementos Elemento .)
    FNAM            reduce using rule 2 (Elementos -> Elementos Elemento .)
    READ            reduce using rule 2 (Elementos -> Elementos Elemento .)
    WRITE           reduce using rule 2 (Elementos -> Elementos Elemento .)
    FOR             reduce using rule 2 (Elementos -> Elementos Elemento .)
    (               reduce using rule 2 (Elementos -> Elementos Elemento .)
    NUM             reduce using rule 2 (Elementos -> Elementos Elemento .)
    ELSE            reduce using rule 2 (Elementos -> Elementos Elemento .)
    IF              reduce using rule 2 (Elementos -> Elementos Elemento .)
    }               reduce using rule 2 (Elementos -> Elementos Elemento .)


state 6

    (4) Elemento -> OperAr .
    (48) OperAr -> OperAr . + Termo
    (49) OperAr -> OperAr . - Termo

    RUN             reduce using rule 4 (Elemento -> OperAr .)
    RETURN          reduce using rule 4 (Elemento -> OperAr .)
    BOOL            reduce using rule 4 (Elemento -> OperAr .)
    VAR             reduce using rule 4 (Elemento -> OperAr .)
    INT             reduce using rule 4 (Elemento -> OperAr .)
    BOOLEAN         reduce using rule 4 (Elemento -> OperAr .)
    FNAM            reduce using rule 4 (Elemento -> OperAr .)
    READ            reduce using rule 4 (Elemento -> OperAr .)
    WRITE           reduce using rule 4 (Elemento -> OperAr .)
    FOR             reduce using rule 4 (Elemento -> OperAr .)
    (               reduce using rule 4 (Elemento -> OperAr .)
    NUM             reduce using rule 4 (Elemento -> OperAr .)
    ELSE            reduce using rule 4 (Elemento -> OperAr .)
    IF              reduce using rule 4 (Elemento -> OperAr .)
    }               reduce using rule 4 (Elemento -> OperAr .)
    +               shift and go to state 36
    -               shift and go to state 37


state 7

    (5) Elemento -> OperLog .

    RUN             reduce using rule 5 (Elemento -> OperLog .)
    RETURN          reduce using rule 5 (Elemento -> OperLog .)
    BOOL            reduce using rule 5 (Elemento -> OperLog .)
    VAR             reduce using rule 5 (Elemento -> OperLog .)
    INT             reduce using rule 5 (Elemento -> OperLog .)
    BOOLEAN         reduce using rule 5 (Elemento -> OperLog .)
    FNAM            reduce using rule 5 (Elemento -> OperLog .)
    READ            reduce using rule 5 (Elemento -> OperLog .)
    WRITE           reduce using rule 5 (Elemento -> OperLog .)
    FOR             reduce using rule 5 (Elemento -> OperLog .)
    (               reduce using rule 5 (Elemento -> OperLog .)
    NUM             reduce using rule 5 (Elemento -> OperLog .)
    ELSE            reduce using rule 5 (Elemento -> OperLog .)
    IF              reduce using rule 5 (Elemento -> OperLog .)
    }               reduce using rule 5 (Elemento -> OperLog .)


state 8

    (6) Elemento -> OperRel .

    RUN             reduce using rule 6 (Elemento -> OperRel .)
    RETURN          reduce using rule 6 (Elemento -> OperRel .)
    BOOL            reduce using rule 6 (Elemento -> OperRel .)
    VAR             reduce using rule 6 (Elemento -> OperRel .)
    INT             reduce using rule 6 (Elemento -> OperRel .)
    BOOLEAN         reduce using rule 6 (Elemento -> OperRel .)
    FNAM            reduce using rule 6 (Elemento -> OperRel .)
    READ            reduce using rule 6 (Elemento -> OperRel .)
    WRITE           reduce using rule 6 (Elemento -> OperRel .)
    FOR             reduce using rule 6 (Elemento -> OperRel .)
    (               reduce using rule 6 (Elemento -> OperRel .)
    NUM             reduce using rule 6 (Elemento -> OperRel .)
    ELSE            reduce using rule 6 (Elemento -> OperRel .)
    IF              reduce using rule 6 (Elemento -> OperRel .)
    }               reduce using rule 6 (Elemento -> OperRel .)


state 9

    (7) Elemento -> Atri .

    RUN             reduce using rule 7 (Elemento -> Atri .)
    RETURN          reduce using rule 7 (Elemento -> Atri .)
    BOOL            reduce using rule 7 (Elemento -> Atri .)
    VAR             reduce using rule 7 (Elemento -> Atri .)
    INT             reduce using rule 7 (Elemento -> Atri .)
    BOOLEAN         reduce using rule 7 (Elemento -> Atri .)
    FNAM            reduce using rule 7 (Elemento -> Atri .)
    READ            reduce using rule 7 (Elemento -> Atri .)
    WRITE           reduce using rule 7 (Elemento -> Atri .)
    FOR             reduce using rule 7 (Elemento -> Atri .)
    (               reduce using rule 7 (Elemento -> Atri .)
    NUM             reduce using rule 7 (Elemento -> Atri .)
    ELSE            reduce using rule 7 (Elemento -> Atri .)
    IF              reduce using rule 7 (Elemento -> Atri .)
    }               reduce using rule 7 (Elemento -> Atri .)


state 10

    (8) Elemento -> RETURN . Var
    (63) Var -> . VAR

    VAR             shift and go to state 35

    Var                            shift and go to state 38

state 11

    (41) OperLog -> Var . AND Var
    (42) OperLog -> Var . AND BOOL
    (45) OperLog -> Var . OR Var
    (46) OperLog -> Var . OR BOOL
    (57) Factor -> Var .
